Basic particle contact class is added.

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -37,6 +37,7 @@ set(HEADERS
     ../include/core.hpp
     ../include/particle.hpp
     ../include/particleforcegenerator.hpp
+    ../include/particlecontacts.hpp
     ../include/math.hpp
     ../demo/app.hpp
     ../demo/ogl_headers.hpp
@@ -47,6 +48,7 @@ set(SOURCES
     ../src/core.cpp
     ../src/particle.cpp
     ../src/particleforcegenerator.cpp
+    ../src/particlecontacts.cpp
     ../src/math.cpp
     ../demo/app.cpp
     ../demo/timing.cpp
