Particle links are added. Some refactoring.

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -38,6 +38,7 @@ set(HEADERS
     ../include/particle.hpp
     ../include/particleforcegenerator.hpp
     ../include/particlecontacts.hpp
+    ../include/particlelinks.hpp
     ../include/math.hpp
     ../demo/app.hpp
     ../demo/ogl_headers.hpp
@@ -49,6 +50,7 @@ set(SOURCES
     ../src/particle.cpp
     ../src/particleforcegenerator.cpp
     ../src/particlecontacts.cpp
+    ../src/particlelinks.cpp
     ../src/math.cpp
     ../demo/app.cpp
     ../demo/timing.cpp
