Base geometry is added.

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -40,6 +40,7 @@ set(HEADERS
     ../include/particlecontacts.hpp
     ../include/particlelinks.hpp
     ../include/particleworld.hpp
+    ../include/geometry.hpp
     ../include/math.hpp
     ../demo/app.hpp
     ../demo/timing.hpp
@@ -54,6 +55,7 @@ set(SOURCES
     ../src/particlecontacts.cpp
     ../src/particlelinks.cpp
     ../src/particleworld.cpp
+    ../src/geometry.cpp
     ../src/math.cpp
     ../demo/app.cpp
     ../demo/timing.cpp
