CMakeLists structure is reworked.

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,21 +1,28 @@
+# Copyright (C) 2017 by Godlike
+# This code is licensed under the MIT license (MIT)
+# (http://opensource.org/licenses/MIT)
+
 cmake_minimum_required (VERSION 3.1)
-project (PegasusDemo)
 
+if(NOT DEFINED PEGASUS_NAME)
+    set(PEGASUS_NAME "PegasusPhysics" CACHE STRING "Pegasus project name.")
+endif ()
+if(NOT DEFINED PEGASUS_LIB)
+    set(PEGASUS_LIB ${PEGASUS_NAME} CACHE STRING "Pegasus library name.")
+endif ()
+
+project(PegasusDemo)
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
+# Copyright (C) 2017 by Godlike
+# This code is licensed under the MIT license (MIT)
+# (http://opensource.org/licenses/MIT)
 
-#########################################################
-# INCLUDE FreeGLUT
-#########################################################
-set(GLUT_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../third_party/FreeGLUT/freeglut/freeglut")
-set(GLUT_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/third_party/FreeGLUT/freeglut/freeglut")
+#FreeGLUT
 include(GlutConfig)
 add_subdirectory(${GLUT_SOURCE_DIR} ${GLUT_BINARY_DIR})
-include_directories(${GLUT_INCLUDE_DIRS})
+include_directories(${GLUT_INCLUDE_DIR})
 
-#########################################################
-# FIND OPENGL
-#########################################################
+#OpenGL
 find_package(OpenGL REQUIRED)
 include_directories(${OpenGL_INCLUDE_DIRS})
 link_directories(${OpenGL_LIBRARY_DIRS})
@@ -24,53 +31,31 @@ if(NOT OPENGL_FOUND)
     message(ERROR " OPENGL not found!")
 endif(NOT OPENGL_FOUND)
 
-#########################################################
-# Include Files
-#########################################################
-set(PEGASUS_INCLUDE_DIRS
-    ../../.
-)
-
+#Target
+include(PegasusConfig)
 include_directories (
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${PEGASUS_INCLUDE_DIRS}
+    ${PEGASUS_INCLUDE_DIR}
+)
+set(DEMO_HEADERS
+    app.hpp
+    timing.hpp
+    random.hpp
+    ogl_headers.hpp
+)
+set(DEMO_SOURCES
+    app.cpp
+    timing.cpp
+    random.cpp
+    blob.cpp
+    main.cpp
 )
 
-set(HEADERS
-    ../include/core.hpp
-    ../include/particle.hpp
-    ../include/particleforcegenerator.hpp
-    ../include/particlecontacts.hpp
-    ../include/particlelinks.hpp
-    ../include/particleworld.hpp
-    ../include/math.hpp
-    ../demo/app.hpp
-    ../demo/timing.hpp
-    ../demo/random.hpp
-    ../demo/ogl_headers.hpp
+add_executable (${PROJECT_NAME} 
+    ${DEMO_SOURCES} 
+    ${DEMO_HEADERS}
 )
-
-set(SOURCES
-    ../src/core.cpp
-    ../src/particle.cpp
-    ../src/particleforcegenerator.cpp
-    ../src/particlecontacts.cpp
-    ../src/particlelinks.cpp
-    ../src/particleworld.cpp
-    ../src/math.cpp
-    ../demo/app.cpp
-    ../demo/timing.cpp
-    ../demo/random.cpp
-    ../demo/blob.cpp
-    ./main.cpp
-)
-
-########################################################
-# Linking
-#########################################################
-add_executable (${PROJECT_NAME} ${SOURCES} ${HEADERS})
-
 target_link_libraries(${PROJECT_NAME} 
     ${OPENGL_LIBRARIES} 
     ${GLUT_LIBRARIES}
+    ${PEGASUS_LIB}
 )
