--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "Pegasus/third_party/eigen"]
 	path = Pegasus/third_party/eigen
 	url = git@github.com:RLovelett/eigen.git
+[submodule "third_party/glm"]
+	path = third_party/glm
+	url = git@github.com:g-truc/glm.git
+[submodule "Pegasus/third_party/glm"]
+	path = Pegasus/third_party/glm
+	url = git@github.com:g-truc/glm.git
