GLM is added as a submodule.

--- a/Pegasus/CMakeLists.txt
+++ b/Pegasus/CMakeLists.txt
@@ -17,6 +17,11 @@ set(CMAKE_CXX_STANDARD 14)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
+#GLM
+include(GlmConfig)
+add_subdirectory(${GLM_SOURCE_DIR})
+include_directories(${GLM_INCLUDE_DIR})
+
 #Eigen
 include(EigenConfig)
 add_subdirectory(${EIGEN_SOURCE_DIR})
