--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "third_party/FreeGLUT"]
 	path = third_party/FreeGLUT
-	url = git@github.com:dcnieho/FreeGLUT.git
+	url = https://github.com/dcnieho/FreeGLUT.git
 [submodule "Pegasus/third_party/glm"]
 	path = Pegasus/third_party/glm
-	url = git@github.com:g-truc/glm.git
+	url = https://github.com/g-truc/glm.git
