CMake reporting library name to parent scope

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,3 +31,5 @@ add_subdirectory(Pegasus)
 if (${PEGASUS_BUILD_DEMOS})
     add_subdirectory(demo)
 endif()
+
+set(PEGASUS_PHYSICS_LIB ${PEGASUS_LIB} PARENT_SCOPE)
