[#70] CMake configuration on Windows platform
Added PEGASUS_EXPORT macro for DLL linkage

--- a/Pegasus/CMakeLists.txt
+++ b/Pegasus/CMakeLists.txt
@@ -69,6 +69,7 @@ target_link_libraries(${PEGASUS_LIB})
 
 install( TARGETS ${PEGASUS_LIB}
     COMPONENT godlike_libraries
+    RUNTIME DESTINATION ${PEGASUS_INSTALL_LIBRARY_DIR}
     LIBRARY DESTINATION ${PEGASUS_INSTALL_LIBRARY_DIR}
     ARCHIVE DESTINATION ${PEGASUS_INSTALL_LIBRARY_DIR}
 )
