[#70] CMake library version and soversion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,9 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 option(PEGASUS_BUILD_DEMOS "Build Pegasus demo." ON)
 
+message(STATUS "${PROJECT_NAME} configuration:")
+message(STATUS "-- PEGASUS_BUILD_DEMOS: ${PEGASUS_BUILD_DEMOS}")
+
 set(PEGASUS_ROOT "${CMAKE_CURRENT_SOURCE_DIR}" CACHE STRING "Pegasus root directory.")
 
 include(PegasusConfig)
