--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Pegasus/third_party/glm"]
 	path = Pegasus/third_party/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "third_party/Catch"]
+	path = third_party/Catch
+	url = https://github.com/philsquared/Catch.git
