--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
-[submodule "third_party/FreeGLUT"]
-	path = third_party/FreeGLUT
-	url = https://github.com/dcnieho/FreeGLUT.git
+[submodule "third_party/glfw"]
+	path = third_party/glfw
+	url = https://github.com/glfw/glfw.git
 [submodule "Pegasus/third_party/glm"]
 	path = Pegasus/third_party/glm
 	url = https://github.com/g-truc/glm.git
 [submodule "third_party/Catch"]
 	path = third_party/Catch
 	url = https://github.com/philsquared/Catch.git
+[submodule "third_party/glbinding"]
+	path = third_party/glbinding
+	url = https://github.com/cginternals/glbinding.git
