[#88] Renderer and Demo comments.

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -23,12 +23,12 @@ include_directories (
 )
 set(DEMO_HEADERS
     Demo.hpp
-    Renderer.hpp
+    Render.hpp
     Bunny.hpp
 )
 set(DEMO_SOURCES
     Demo.cpp
-    Renderer.cpp
+    Render.cpp
     Main.cpp
 )
 
